<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:srcCompat="@drawable/barca"
        tools:ignore="ContentDescription,InefficientWeight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="UselessLeaf" >

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="2"
            android:backgroundTint="@color/teal_700"
            android:text="@string/Button_1"
            android:textColor="#000000"
            app:cornerRadius="10dp"
            tools:ignore="ButtonStyle,InefficientWeight,RtlHardcoded,TextContrastCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_margin="25dp"
            android:backgroundTint="@color/black"
            android:text="@string/Button_2"
            app:cornerRadius="10dp"
            tools:ignore="ButtonStyle,InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">


        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/match"
            app:cornerRadius="10dp"
            android:textColor="#311B92" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="0dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/purple_200"
            android:textColor="#311B92"
            android:text="@string/right"
            app:cornerRadius="10dp"
            tools:ignore="RtlHardcoded,TextContrastCheck" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/purple_200"
            android:textColor="#311B92"
            android:text="@string/left"
            app:cornerRadius="10dp"
            tools:ignore="RtlHardcoded,TextContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#00FF99"
                android:textColor="#607D8B"
                android:textSize="40dp"
                app:cornerRadius="10dp"
                android:text="@string/lf"
                tools:ignore="SpUsage"
                style="?android:attr/buttonBarButtonStyle" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#858585"
                android:text="@string/select"
                android:textSize="20dp"
                tools:ignore="InefficientWeight,SpUsage" />

            <Button
                android:id="@+id/button11"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#00FF99"
                android:textColor="#607D8B"
                android:textSize="40dp"
                app:cornerRadius="10dp"
                android:text="@string/rg"
                android:layout_gravity="right|top"
                tools:ignore="RtlHardcoded,SpUsage"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
