<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="148dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/human"
            tools:ignore="ImageContrastCheck" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/name"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/EnterName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="#A5A2A2"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:ems="0"
            android:hint="@string/EnterPhone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="#A5A2A2"
            android:textSize="16sp"
            tools:ignore="Autofill,RtlHardcoded,TouchTargetSizeCheck" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Alamat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/address"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/EnterAdress"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="#A5A2A2"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_span="2"
            android:backgroundTint="#062541"
            android:radius="50dp"
            android:text="@string/submit"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>